Fix overflow in root

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,7 @@
 .root {
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 .container { 
